--- a/index.html
+++ b/index.html
@@ -1,21 +1,41 @@
 <!DOCTYPE html>
-<html lang="ar">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>حساباتي على وسائل التواصل الاجتماعي</title>
+    <title>My Personal Website</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container">
-        <h1>حساباتي على وسائل التواصل الاجتماعي</h1>
-        <ul class="social-links">
-            <li><a href="https://www.facebook.com/yourusername" target="_blank" class="facebook">فيسبوك</a></li>
-            <li><a href="https://www.twitter.com/yourusername" target="_blank" class="twitter">تويتر</a></li>
-            <li><a href="https://www.instagram.com/yourusername" target="_blank" class="instagram">إنستغرام</a></li>
-            <li><a href="https://www.linkedin.com/in/yourusername" target="_blank" class="linkedin">لينكد إن</a></li>
-            <li><a href="https://www.youtube.com/c/yourusername" target="_blank" class="youtube">يوتيوب</a></li>
-        </ul>
-    </div>
+    <header>
+        <div class="profile-picture">
+            <img src="https://i.top4top.io/p_3099gu2100.jpg" alt="Your Profile Picture">
+        </div>
+    </header>
+    <main>
+        <div class="social-links">
+            <div class="social-box">
+                <a href="http://line.me/ti/p/~66.66p">Line</a>
+            </div>
+            <div class="social-box">
+                <a href="https://www.paypal.me/hamzh715">PayPal</a>
+            </div>
+            <div class="social-box">
+                <a href="https://wa.me/+380968411361">WhatsApp</a>
+            </div>
+            <div class="social-box">
+                <a href="https://www.instagram.com/77.7yp">Instagram</a>
+            </div>
+            <div class="social-box">
+                <a href="https://youtube.com/@kingbots8196?si=vW7lOfJyDtYPGssj">YouTube</a>
+            </div>
+            <div class="social-box">
+                <a href="https://kingbots.xyz/api-docs/">API Docs</a>
+            </div>
+            <div class="social-box">
+                <a href="https://kingbots.xyz/qr-to-primary/">QR to Primary</a>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
