--- a/index.html
+++ b/index.html
@@ -15,25 +15,39 @@
     <main>
         <div class="social-links">
             <div class="social-box">
-                <a href="http://line.me/ti/p/~66.66p">Line</a>
+                <a href="http://line.me/ti/p/~66.66p">
+                    <img src="line-icon.png" alt="Line">
+                </a>
             </div>
             <div class="social-box">
-                <a href="https://www.paypal.me/hamzh715">PayPal</a>
+                <a href="https://www.paypal.me/hamzh715">
+                    <img src="paypal-icon.png" alt="PayPal">
+                </a>
             </div>
             <div class="social-box">
-                <a href="https://wa.me/+380968411361">WhatsApp</a>
+                <a href="https://wa.me/+380968411361">
+                    <img src="whatsapp-icon.png" alt="WhatsApp">
+                </a>
             </div>
             <div class="social-box">
-                <a href="https://www.instagram.com/77.7yp">Instagram</a>
+                <a href="https://www.instagram.com/77.7yp">
+                    <img src="instagram-icon.png" alt="Instagram">
+                </a>
             </div>
             <div class="social-box">
-                <a href="https://youtube.com/@kingbots8196?si=vW7lOfJyDtYPGssj">YouTube</a>
+                <a href="https://youtube.com/@kingbots8196?si=vW7lOfJyDtYPGssj">
+                    <img src="youtube-icon.png" alt="YouTube">
+                </a>
             </div>
             <div class="social-box">
-                <a href="https://kingbots.xyz/api-docs/">API Docs</a>
+                <a href="https://kingbots.xyz/api-docs/">
+                    <img src="api-icon.png" alt="API Docs">
+                </a>
             </div>
             <div class="social-box">
-                <a href="https://kingbots.xyz/qr-to-primary/">QR to Primary</a>
+                <a href="https://kingbots.xyz/qr-to-primary/">
+                    <img src="qr-icon.png" alt="QR to Primary">
+                </a>
             </div>
         </div>
     </main>
